--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = coffe_shop_challenge
+PRODUCT_NAME = coffee_shop_challenge
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.cafeine.app.coffeShopChallenge
+PRODUCT_BUNDLE_IDENTIFIER = com.cafeine.app.coffeeShopChallenge
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.cafeine.app. All rights reserved.
