--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  freezed_annotation: ^2.4.1
   go_router: ^13.0.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
   very_good_analysis: ^5.1.0
 
 # The following section is specific to Flutter packages.
