--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   json_annotation: ^4.8.1
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   build_runner: ^2.4.8
