--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # i18n
+  slang: ^3.29.0
+  slang_flutter: ^3.29.0
+  flutter_localizations:
+    sdk: flutter
+
   freezed_annotation: ^2.4.1
   go_router: ^13.0.1
   json_annotation: ^4.8.1
   url_strategy: ^0.2.0
 
 dev_dependencies:
-  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.4.8
+  slang_build_runner: ^3.29.0
   freezed: ^2.4.6
   json_serializable: ^6.7.1
   very_good_analysis: ^5.1.0
